plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'capstone'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
//	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation 'org.postgresql:postgresql:42.6.0' // DB 설정
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE' // AWS S3
	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1' // JSON Parsing
	implementation 'org.springframework.boot:spring-boot-starter-data-redis' // redis
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // jwt
	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2") // swagger
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'

	// jwt
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

//test {
//	useJUnitPlatform()
//}

// 테스트 코드 제외 빌드
//tasks.withType(Test) {
//	enabled = false
//}
